--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h2>Hello, world</h2>
     <section class="promo">
         <div class="container">
             <div class="logo">
