--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h2>Hello, world</h2>
+    <h2>Hello!</h2>
     <section class="promo">
         <div class="container">
             <div class="logo">
